# pareen

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: plots.rs
src/: anim.rs  anim_box.rs  anim_with_dur.rs  arithmetic.rs  lib.rs  primitives.rs  stats.rs
