[package]
name = "pareen"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"
license = "MIT"
description = "A small library for parameterized inbetweening"
homepage = "https://github.com/leod/pareen"
documentation = "https://docs.rs/pareen"
repository = "https://github.com/leod/pareen"
keywords = ["animation", "combinators", "tween", "easing"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
assert_approx_eq = "1.0"
gnuplot = "0.0.32"
