[package]
name = "pareen"
version = "0.2.1"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A small library for parameterized inbetweening"
homepage = "https://github.com/leod/pareen"
documentation = "https://docs.rs/pareen"
repository = "https://github.com/leod/pareen"
keywords = ["animation", "combinators", "tween", "easing"]
readme = "README.md"

[dependencies]
num-traits = "0.2"
easer = { version = "0.2", optional = true }

[dev-dependencies]
assert_approx_eq = "1.0"
gnuplot = "0.0.32"

[package.metadata.docs.rs]
features = ["easer"]
